Update giao diện các trang cart, admin, user profile

--- a/pages/birthday-cake-1-logged.html
+++ b/pages/birthday-cake-1-logged.html
@@ -110,7 +110,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <!-- Các menu đang có -->
           <div class="navbar-nav ms-auto mx-lg-auto py-0">
-            <a href="../index.html" class="nav-item nav-link active">Home</a>
+            <a href="loggedin.html" class="nav-item nav-link active">Home</a>
             <a href="about.html" class="nav-item nav-link">About Us</a>
             <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
             <a href="team.html" class="nav-item nav-link">Master Chefs</a>
@@ -201,7 +201,7 @@
               Delicious custom birthday cake with high-quality ingredients, perfect for celebrations.
             </p>
             <h5 class="fw-semibold">$45.99</h5>
-            <button class="btn btn-primary mt-2" onclick="window.location.href='birthday-cake-detail-1.html'">
+            <button class="btn btn-primary mt-2" onclick="window.location.href='birthday-cake-detail-1-logged.html'">
               Read More
             </button>
             <button class="btn btn-primary mt-2"><i class="fas fa-shopping-cart me-2"></i>Add to cart</button>
