--- a/pages/loggedin.html
+++ b/pages/loggedin.html
@@ -102,7 +102,7 @@
                         </a>
                         <div class="dropdown-menu dropdown-menu-end m-0">
                             <a href="user-profile.html" class="dropdown-item">Thông tin</a>
-                            <a href="orders.html" class="dropdown-item">Đơn hàng</a>
+                            <a href="order-list.html" class="dropdown-item">Đơn hàng</a>
                             <div class="dropdown-divider"></div>
                             <a href="../index.html" class="dropdown-item">Đăng xuất</a>
                         </div>
@@ -366,7 +366,7 @@
                                     </div>
                                     <div
                                         class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-4">
-                                        <h5 class="text-uppercase">Birthday Cake</h5>
+                                        <h5 class="text-uppercase"><a href="birthday-cake-1-logged.html">Birthday Cake</a></h5>
                                         <span>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit
                                             justo</span>
                                     </div>
