--- a/pages/order-list.html
+++ b/pages/order-list.html
@@ -137,7 +137,7 @@
                 />
               </a>
               <div class="dropdown-menu dropdown-menu-end m-0">
-                <a href="profile.html" class="dropdown-item">Thông tin</a>
+                <a href="user-profile.html" class="dropdown-item">Thông tin</a>
                 <a href="orders.html" class="dropdown-item">Đơn hàng</a>
                 <div class="dropdown-divider"></div>
                 <a href="../index.html" class="dropdown-item">Đăng xuất</a>
@@ -150,7 +150,7 @@
     <!-- Navbar End -->
 
     <div class="container py-5">
-    <h2 class="mb-4 text-center text-uppercase fw-bold">Danh sách đơn hàng</h2>
+    <h2 class="mb-4 text-center text-uppercase fw-bold">Chi tiết đơn hàng</h2>
 
     <div class="table-responsive shadow-sm rounded">
       <table class="table table-bordered align-middle text-center mb-0">
@@ -198,7 +198,7 @@
 
 
   <div class="container py-5">
-    <h2 class="mb-4 text-center text-uppercase fw-bold">Danh sách đơn hàng</h2>
+    <h2 class="mb-4 text-center text-uppercase fw-bold">Chi tiết đơn hàng</h2>
 
     <div class="table-responsive shadow-sm rounded">
       <table class="table table-bordered align-middle text-center mb-0">
