--- a/index.html
+++ b/index.html
@@ -114,12 +114,6 @@
                                 <div
                                     class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                                     <a href="" class="btn btn-primary border-inner py-3 px-5 me-5">Read More</a>
-                                    <button type="button" class="btn-play" data-bs-toggle="modal"
-                                        data-src="https://www.youtube.com/embed/DWRcNpR6Kdc"
-                                        data-bs-target="#videoModal">
-                                        <span></span>
-                                    </button>
-                                    <h5 class="font-weight-normal text-white m-0 ms-4 d-none d-sm-block">Play Video</h5>
                                 </div>
                             </div>
                         </div>
@@ -208,8 +202,7 @@
     </div>
     <!-- Video Modal End -->
 
-
-    <!-- About Start -->
+<!--
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="section-title position-relative text-center mx-auto mb-5 pb-3" style="max-width: 600px;">
@@ -252,8 +245,7 @@
             </div>
         </div>
     </div>
-    <!-- About End -->
-
+-->
     
     <!-- Facts Start -->
     <!-- <div class="container-fluid bg-img py-5 mb-5">
@@ -346,7 +338,7 @@
                                     </div>
                                     <div
                                         class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-4">
-                                        <h5 class="text-uppercase">Birthday Cake</h5>
+                                        <h5 class="text-uppercase"><a href="pages/birthday-cake-1.html">Birthday Cake</a></h5>
                                         <span>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit
                                             justo</span>
                                     </div>
@@ -742,7 +734,7 @@
     <!-- Team End -->
 
 
-    <!-- Offer Start -->
+    <!-- Offer Start
     <div class="container-fluid bg-offer my-5 py-5">
         <div class="container py-5">
             <div class="row gx-5 justify-content-center">
@@ -762,7 +754,7 @@
         </div>
     </div>
     <!-- Offer End -->
-
+ -->
 
     <!-- Testimonial Start -->
     <!-- <div class="container-fluid py-5">
