--- a/pages/birthday-cake-1.html
+++ b/pages/birthday-cake-1.html
@@ -101,9 +101,9 @@
 
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto mx-lg-auto py-0">
-          <a href="../index.html" class="nav-item nav-link active">Home</a>
+          <a href="../index.html" class="nav-item nav-link">Home</a>
           <a href="about.html" class="nav-item nav-link">About Us</a>
-          <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
+          <a href="menu.html" class="nav-item nav-link active">Menu & Pricing</a>
           <a href="team.html" class="nav-item nav-link">Master Chefs</a>
           <div class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -158,7 +158,7 @@
               Delicious custom birthday cake with high-quality ingredients, perfect for celebrations.
             </p>
             <h5 class="fw-semibold">$45.99</h5>
-            <button class="btn btn-primary mt-2" onclick="window.location.href='birthday-cake-detail-1.html'">
+            <button class="btn btn-primary mt-2" onclick="window.location.href='birthday-cake-detail-1-logged.html'">
               Read More
             </button>
             <button class="btn btn-primary mt-2"><i class="fas fa-shopping-cart me-2"></i>Add to cart</button>
