--- a/pages/login.html
+++ b/pages/login.html
@@ -33,9 +33,9 @@
 <body>
   <form>
     <!-- Email input -->
-    <div class="mb-4">
-      <label class="form-label" for="form2Example1">Email address</label>
-      <input type="email" id="form2Example1" class="form-control" />
+    <div class="mb-4">Username
+      <label class="form-label" for="form2Example1"></label>
+      <input type="text" id="form2Example1" class="form-control" />
     </div>
 
     <!-- Password input -->
@@ -60,7 +60,7 @@
     </div>
 
     <!-- Submit button -->
-    <button type="button" class="btn btn-primary btn-block mb-4" onclick="window.location.href='loggedin.html'">
+    <button type="button" class="btn btn-primary btn-block mb-4">
       Log in
     </button>
 
@@ -78,6 +78,27 @@
 
   <!-- MDB JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.js"></script>
+
+  <script>
+  document.querySelector('button').addEventListener('click', function () {
+    const username = document.getElementById('form2Example1').value.trim();
+    const password = document.getElementById('form2Example2').value.trim();
+
+    // Kiểm tra input
+    if (!username || !password) {
+      alert("Please enter both username and password!");
+      return;
+    }
+
+    // Kiểm tra username
+    if (username.toLowerCase() === "admin" || username.toLowerCase() === "admin@gmail.com") {
+      window.location.href = "admin.html";
+    } else {
+      window.location.href = "loggedin.html";
+    }
+  });
+</script>
+
 </body>
 
 </html>
