--- a/pages/signup.html
+++ b/pages/signup.html
@@ -31,6 +31,11 @@
     </div>
 
     <div class="mb-4">
+      <label class="form-label" for="formUsername">Username</label>
+      <input type="text" id="formUsername" class="form-control" required />
+    </div>
+
+    <div class="mb-4">
       <label class="form-label" for="formEmail">Your Email</label>
       <input type="email" id="formEmail" class="form-control" required />
     </div>
