--- a/pages/wedding-cake-3.html
+++ b/pages/wedding-cake-3.html
@@ -101,9 +101,9 @@
 
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto mx-lg-auto py-0">
-          <a href="../index.html" class="nav-item nav-link active">Home</a>
+          <a href="../index.html" class="nav-item nav-link">Home</a>
           <a href="about.html" class="nav-item nav-link">About Us</a>
-          <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
+          <a href="menu.html" class="nav-item nav-link active">Menu & Pricing</a>
           <a href="team.html" class="nav-item nav-link">Master Chefs</a>
           <div class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
