--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="navbar-nav ms-auto mx-lg-auto py-0">
                     <a href="pages/index.html" class="nav-item nav-link active">Home</a>
                     <a href="pages/about.html" class="nav-item nav-link">About Us</a>
-                    <a href="pages/menu.html" class="nav-item nav-link">Menu & Pricing</a>
+                    <a href="pages/birthday-cake-1.html" class="nav-item nav-link">Menu & Pricing</a>
                     <a href="pages/team.html" class="nav-item nav-link">Master Chefs</a>
                     
                     <a href="pages/contact.html" class="nav-item nav-link">Contact Us</a>
