--- a/pages/login.html
+++ b/pages/login.html
@@ -92,7 +92,7 @@
 
     // Kiểm tra username
     if (username.toLowerCase() === "admin" || username.toLowerCase() === "admin@gmail.com") {
-      window.location.href = "admin.html";
+      window.location.href = "/admin/index.html";
     } else {
       window.location.href = "loggedin.html";
     }
