Update giao diện admin, chỉnh các menu thành các menu chính chứa submenu. Chỉnh lại dashboard thành biểu đồ cột

--- a/admin/user-detail-nguyenvana.html
+++ b/admin/user-detail-nguyenvana.html
@@ -63,7 +63,7 @@
   <main style="margin-left: 250px; min-height: 100vh; padding: 1.5rem;">
     <nav style="margin-bottom: 1.5rem; padding: 0.75rem 1.5rem; border-radius: 0.75rem; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06); background-color: white;">
       <div>
-        <b style="color:#e88f2a;">Cập nhật khách hàng</b>
+        <b style="color:#2b2825;">Cập nhật khách hàng</b>
       </div>
     </nav>
 
