--- a/admin/order.html
+++ b/admin/order.html
@@ -29,7 +29,7 @@
     }
 
     thead {
-      background: linear-gradient(195deg, #e88f2a, #e88f2a);
+      background: linear-gradient(195deg, #2b2825, #2b2825);
       color: white;
     }
 
@@ -267,7 +267,7 @@
           <a href="javascript:void(0);" onclick="toggleSubMenu()"
             style="display: flex; align-items: center; justify-content: space-between; padding: 0.75rem 1rem; color: white; border-radius: 0.375rem; text-decoration: none;">
             <span style="display: flex; align-items: center;">
-              <i class="material-icons" style="font-size:20px; margin-right:10px;">weekend</i> Quản lý khách hàng
+              <i class="material-icons" style="font-size:20px; margin-right:10px;">weekend</i> Khách hàng
             </span>
             <i class="material-icons" id="submenu-arrow"
               style="font-size:18px; transition: transform 0.3s;">expand_more</i>
@@ -286,31 +286,90 @@
           </ul>
         </li>
 
-        <li><a href="products.html"
-            style="display: flex; align-items: center; padding: 0.75rem 1rem; color: white; border-radius: 0.375rem; text-decoration: none;"><i
-              class="material-icons" style="font-size:20px; margin-right:10px;">table_view</i> Quản lý sản phẩm</a></li>
-        <li><a href="category.html"
-            style="display: flex; align-items: center; padding: 0.75rem 1rem; color: white; border-radius: 0.375rem; text-decoration: none;"><i
-              class="material-icons" style="font-size:20px; margin-right:10px;">category</i> Quản lý danh mục</a></li>
-        <li><a href="phieunhap.html"
-            style="display: flex; align-items: center; padding: 0.75rem 1rem; color: white; border-radius: 0.375rem; text-decoration: none;"><i
-              class="material-icons" style="font-size:20px; margin-right:10px;">inventory_2</i> Quản lý nhập hàng</a>
+        <!-- Quản lý sản phẩm có submenu -->
+        <li style="margin: 0.25rem 0;">
+          <a href="javascript:void(0);" onclick="toggleSubMenu('product-submenu', 'product-arrow')"
+            style="display: flex; align-items: center; justify-content: space-between; padding: 0.75rem 1rem; color: white; border-radius: 0.375rem; text-decoration: none;">
+            <span style="display: flex; align-items: center;">
+              <i class="material-icons" style="font-size:20px; margin-right:10px;">table_view</i> Sản phẩm
+            </span>
+            <i class="material-icons" id="product-arrow"
+              style="font-size:18px; transition: transform 0.3s;">expand_more</i>
+          </a>
+
+          <ul id="product-submenu" style="list-style:none; padding-left:2rem; margin:0; display:none;">
+            <li style="margin: 0.25rem 0;">
+              <a href="products.html"
+                style="display:block; padding:0.5rem 0.75rem; color:white; border-radius:0.375rem; text-decoration:none;">
+                Danh sách sản phẩm
+              </a>
+            </li>
+            <li style="margin: 0.25rem 0;">
+              <a href="phieunhap.html"
+                style="display:block; padding:0.5rem 0.75rem; color:white; border-radius:0.375rem; text-decoration:none;">
+                Quản lý nhập
+              </a>
+            </li>
+            <li style="margin: 0.25rem 0;">
+              <a href="giaban.html"
+                style="display:block; padding:0.5rem 0.75rem; color:white; border-radius:0.375rem; text-decoration:none;">
+                Quản lý giá bán
+              </a>
+            </li>
+          </ul>
         </li>
-        <li><a href="giaban.html"
-            style="display: flex; align-items: center; padding: 0.75rem 1rem; color: white; border-radius: 0.375rem; text-decoration: none;"><i
-              class="material-icons" style="font-size:20px; margin-right:10px;">attach_money</i> Quản lý giá bán</a>
+
+
+        <!-- Quản lý đầu bếp có submenu -->
+        <li style="margin: 0.25rem 0;">
+          <a href="javascript:void(0);" onclick="toggleSubMenu('chef-submenu', 'chef-arrow')"
+            style="display: flex; align-items: center; justify-content: space-between; padding: 0.75rem 1rem; color: white; border-radius: 0.375rem; text-decoration: none;">
+            <span style="display: flex; align-items: center;">
+              <i class="material-icons" style="font-size:20px; margin-right:10px;">table_view</i> Đầu bếp
+            </span>
+            <i class="material-icons" id="chef-arrow"
+              style="font-size:18px; transition: transform 0.3s;">expand_more</i>
+          </a>
+
+          <ul id="chef-submenu" style="list-style:none; padding-left:2rem; margin:0; display:none;">
+            <li style="margin: 0.25rem 0;">
+              <a href="chef.html"
+                style="display:block; padding:0.5rem 0.75rem; color:white; border-radius:0.375rem; text-decoration:none;">
+                Danh sách đầu bếp
+              </a>
+            </li>
+            <li style="margin: 0.25rem 0;">
+              <a href="salary.html"
+                style="display:block; padding:0.5rem 0.75rem; color:white; border-radius:0.375rem; text-decoration:none;">
+                Quản lý lương
+              </a>
+            </li>
+          </ul>
         </li>
-        <li><a href="tonkho.html"
-            style="display: flex; align-items: center; padding: 0.75rem 1rem; color: white; border-radius: 0.375rem; text-decoration: none;"><i
-              class="material-icons" style="font-size:20px; margin-right:10px;">inventory</i> Quản lý tồn kho</a></li>
+
+        <!-- Nút Đăng xuất ngay dưới menu Đầu bếp -->
+        <li style="margin-top: 1rem; text-align: center;">
+          <a href="../index.html" style="
+                        display: flex;
+                        align-items: center;
+                        justify-content: left;
+                        gap: 8px;
+                        background: linear-gradient(195deg, #2b2825, #2b2825);
+                        color: white;
+                        padding: 0.625rem 1.5rem;
+                        font-size: 0.875rem;
+                        border-radius: 0.25rem;
+                        text-decoration: none;
+                        width: 80%;
+                    ">
+            <i class="material-icons" style="font-size:18px;">logout</i>
+            <span>Đăng xuất</span>
+          </a>
+        </li>
       </ul>
     </div>
 
-    <div style="position: absolute; width: 100%; bottom: 0; padding: 1rem;">
-      <a href="../index.html"
-        style="display: inline-block; background: linear-gradient(195deg, #e88f2a, #e88f2a); color: white; padding: 0.625rem 1.5rem; font-size: 0.875rem; border-radius: 0.25rem; text-decoration: none; width: 100%; text-align: center;">Đăng
-        xuất</a>
-    </div>
+    
   </aside>
 
   <!-- MAIN -->
