--- a/admin/index.html
+++ b/admin/index.html
@@ -40,7 +40,7 @@
                     <a href="javascript:void(0);" onclick="toggleSubMenu()"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 0.75rem 1rem; color: white; border-radius: 0.375rem; text-decoration: none;">
                         <span style="display: flex; align-items: center;">
-                            <i class="material-icons" style="font-size:20px; margin-right:10px;">weekend</i> Khách hàng
+                            <i class="material-icons" style="font-size:20px; margin-right:10px;">person</i> Khách hàng
                         </span>
                         <i class="material-icons" id="submenu-arrow"
                             style="font-size:18px; transition: transform 0.3s;">expand_more</i>
@@ -172,9 +172,74 @@
                         style="text-align: center; margin-bottom: 1.5rem; font-weight: 300; color: #344767; margin-top: 1.25rem;">
                         Xin chào, Admin</h1>
 
+
+                    <!-- Thẻ thống kê tổng quan -->
+                    <div style="
+                        display: flex;
+                        justify-content: space-between;
+                        flex-wrap: wrap;
+                        gap: 1rem;
+                        margin-bottom: 1.5rem;
+                        ">
+                        <div style="
+                            flex: 1;
+                            min-width: 200px;
+                            background: linear-gradient(195deg, #42a5f5, #478ed1);
+                            color: white;
+                            border-radius: 0.75rem;
+                            padding: 1rem 1.25rem;
+                            box-shadow: 0 4px 20px rgba(0,0,0,0.14);
+                        ">
+                            <h4 style="margin: 0; font-weight: 500;">Lượt truy cập</h4>
+                            <p style="margin: 0.25rem 0 0; font-size: 1.25rem; font-weight: 700;">12,450</p>
+                        </div>
+
+                        <div style="
+                            flex: 1;
+                            min-width: 200px;
+                            background: linear-gradient(195deg, #66bb6a, #43a047);
+                            color: white;
+                            border-radius: 0.75rem;
+                            padding: 1rem 1.25rem;
+                            box-shadow: 0 4px 20px rgba(0,0,0,0.14);
+                        ">
+                            <h4 style="margin: 0; font-weight: 500;">Số khách hàng</h4>
+                            <p style="margin: 0.25rem 0 0; font-size: 1.25rem; font-weight: 700;">320</p>
+                            <a href="user.html" style="color: white; text-decoration: underline;">View Customer</a>
+                            <span style="font-size: 1.25rem;">›</span>
+                        </div>
+
+                        <div style="
+                            flex: 1;
+                            min-width: 200px;
+                            background: linear-gradient(195deg, #ffa726, #fb8c00);
+                            color: white;
+                            border-radius: 0.75rem;
+                            padding: 1rem 1.25rem;
+                            box-shadow: 0 4px 20px rgba(0,0,0,0.14);
+                        ">
+                            <h4 style="margin: 0; font-weight: 500;">Số nhân viên</h4>
+                            <p style="margin: 0.25rem 0 0; font-size: 1.25rem; font-weight: 700;">25</p>
+                        </div>
+
+                        <div style="
+                            flex: 1;
+                            min-width: 200px;
+                            background: linear-gradient(195deg, #ef5350, #e53935);
+                            color: white;
+                            border-radius: 0.75rem;
+                            padding: 1rem 1.25rem;
+                            box-shadow: 0 4px 20px rgba(0,0,0,0.14);
+                        ">
+                            <h4 style="margin: 0; font-weight: 500;">Doanh thu quý</h4>
+                            <p style="margin: 0.25rem 0 0; font-size: 1.25rem; font-weight: 700;">₫540,000,000</p>
+                        </div>
+                    </div>
+
+
                     <!-- Dashboard Chart -->
                     <div style="background: white; border-radius: 0.75rem; padding: 1.5rem; 
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1); margin-bottom: 1.5rem;">
+                    box-shadow: 0 4px 6px rgba(0,0,0,0.1); margin-bottom: 1.5rem;">
                         <h4 style="margin-bottom: 1rem; font-weight: 700; color: #333;">Top bán chạy</h4>
                         <canvas id="dashboardChart" height="100"></canvas>
                     </div>
@@ -182,7 +247,7 @@
 
 
 
-                    <!-- User Statistics Table -->
+                    User Statistics Table
                     <div
                         style="display: flex; flex-wrap: wrap; margin-right: -15px; margin-left: -15px; margin-top: 1.5rem;">
                         <div style="flex: 0 0 100%; max-width: 100%; padding-right: 15px; padding-left: 15px;">
@@ -409,6 +474,8 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
     </main>
 
     <script>
