--- a/pages/birthday-cake-1.html
+++ b/pages/birthday-cake-1.html
@@ -171,7 +171,7 @@
       display: inline-block;
       margin: 5px;
       padding: 6px 12px;
-      background-color: #ff8c00;
+      background-color: #2b2825;
       color: #fff;
       text-decoration: none;
       border-radius: 4px;
