--- a/index.html
+++ b/index.html
@@ -111,10 +111,6 @@
                                 <h1 class="font-secondary text-primary mb-4">Super Crispy</h1>
                                 <h1 class="display-1 text-uppercase text-white mb-4">CakeZone</h1>
                                 <h1 class="text-uppercase text-white">The Best Cake In London</h1>
-                                <div
-                                    class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                                    <a href="" class="btn btn-primary border-inner py-3 px-5 me-5">Read More</a>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -130,10 +126,6 @@
                                 <h1 class="font-secondary text-warning mb-4">Fresh & Tasty</h1>
                                 <h1 class="display-1 text-uppercase text-white mb-4">BakeryZone</h1>
                                 <h1 class="text-uppercase text-white">Best Pastry in London</h1>
-                                <div
-                                    class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                                    <a href="" class="btn btn-warning border-inner py-3 px-5 me-5">Explore</a>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -149,10 +141,6 @@
                                 <h1 class="font-secondary text-dark mb-4">Sweet & Soft</h1>
                                 <h1 class="display-1 text-uppercase text-white mb-4">CookieZone</h1>
                                 <h1 class="text-uppercase text-white">Best Cookies in London</h1>
-                                <div
-                                    class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                                    <a href="" class="btn btn-dark border-inner py-3 px-5 me-5">Discover</a>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -323,7 +311,7 @@
                         <a class="nav-link text-white" data-bs-toggle="pill" href="#tab-2">Wedding</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" data-bs-toggle="pill" href="#tab-3">Custom</a>
+                        <a class="nav-link text-white" data-bs-toggle="pill" href="#tab-3">Snack</a>
                     </li>
                 </ul>
                 <div class="tab-content">
@@ -526,7 +514,7 @@
                                     </div>
                                     <div
                                         class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-4">
-                                        <h5 class="text-uppercase">Custom Cake</h5>
+                                        <h5 class="text-uppercase">Snack Cake</h5>
                                         <span>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit
                                             justo</span>
                                     </div>
@@ -541,7 +529,7 @@
                                     </div>
                                     <div
                                         class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-4">
-                                        <h5 class="text-uppercase">Custom Cake</h5>
+                                        <h5 class="text-uppercase">Snack Cake</h5>
                                         <span>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit
                                             justo</span>
                                     </div>
@@ -556,7 +544,7 @@
                                     </div>
                                     <div
                                         class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-4">
-                                        <h5 class="text-uppercase">Custom Cake</h5>
+                                        <h5 class="text-uppercase">Snack Cake</h5>
                                         <span>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit
                                             justo</span>
                                     </div>
@@ -571,7 +559,7 @@
                                     </div>
                                     <div
                                         class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-4">
-                                        <h5 class="text-uppercase">Custom Cake</h5>
+                                        <h5 class="text-uppercase">Snack Cake</h5>
                                         <span>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit
                                             justo</span>
                                     </div>
@@ -586,7 +574,7 @@
                                     </div>
                                     <div
                                         class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-4">
-                                        <h5 class="text-uppercase">Custom Cake</h5>
+                                        <h5 class="text-uppercase">Snack Cake</h5>
                                         <span>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit
                                             justo</span>
                                     </div>
@@ -601,7 +589,7 @@
                                     </div>
                                     <div
                                         class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-4">
-                                        <h5 class="text-uppercase">Custom Cake</h5>
+                                        <h5 class="text-uppercase">Snack Cake</h5>
                                         <span>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit
                                             justo</span>
                                     </div>
@@ -638,7 +626,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="bg-primary border-inner text-center text-white p-5">
-                        <h4 class="text-uppercase mb-3">Custom Cake</h4>
+                        <h4 class="text-uppercase mb-3">Snack Cake</h4>
                         <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet
                             kasd lorem dolor ipsum</p>
                         <a class="text-uppercase text-dark" href="">Read More <i class="bi bi-arrow-right"></i></a>
