--- a/admin/index.html
+++ b/admin/index.html
@@ -31,7 +31,7 @@
                 <li style="margin: 0.25rem 0;">
                     <a href="index.html"
                         style="display: flex; align-items: center; padding: 0.75rem 1rem; color: white; border-radius: 0.375rem; text-decoration: none; background: linear-gradient(195deg,#e88f2a,#e88f2a); box-shadow: 0 4px 20px rgba(0,0,0,0.14),0 7px 10px -5px rgba(233,30,99,0.4);">
-                        <i class="material-icons" style="font-size:20px; margin-right:10px;">dashboard</i> Tổng quan
+                        <i class="material-icons" style="font-size:20px; margin-right:10px;"></i> Tổng quan
                     </a>
                 </li>
 
@@ -40,7 +40,7 @@
                     <a href="javascript:void(0);" onclick="toggleSubMenu()"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 0.75rem 1rem; color: white; border-radius: 0.375rem; text-decoration: none;">
                         <span style="display: flex; align-items: center;">
-                            <i class="material-icons" style="font-size:20px; margin-right:10px;">person</i> Khách hàng
+                            <i class="material-icons" style="font-size:20px; margin-right:10px;"></i> Khách hàng
                         </span>
                         <i class="material-icons" id="submenu-arrow"
                             style="font-size:18px; transition: transform 0.3s;">expand_more</i>
@@ -64,7 +64,7 @@
                     <a href="javascript:void(0);" onclick="toggleSubMenu('product-submenu', 'product-arrow')"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 0.75rem 1rem; color: white; border-radius: 0.375rem; text-decoration: none;">
                         <span style="display: flex; align-items: center;">
-                            <i class="material-icons" style="font-size:20px; margin-right:10px;">table_view</i> Sản phẩm
+                            <i class="material-icons" style="font-size:20px; margin-right:10px;"></i> Sản phẩm
                         </span>
                         <i class="material-icons" id="product-arrow"
                             style="font-size:18px; transition: transform 0.3s;">expand_more</i>
@@ -98,7 +98,7 @@
                     <a href="javascript:void(0);" onclick="toggleSubMenu('chef-submenu', 'chef-arrow')"
                         style="display: flex; align-items: center; justify-content: space-between; padding: 0.75rem 1rem; color: white; border-radius: 0.375rem; text-decoration: none;">
                         <span style="display: flex; align-items: center;">
-                            <i class="material-icons" style="font-size:20px; margin-right:10px;">table_view</i> Đầu bếp
+                            <i class="material-icons" style="font-size:20px; margin-right:10px;"></i> Nhân viên
                         </span>
                         <i class="material-icons" id="chef-arrow"
                             style="font-size:18px; transition: transform 0.3s;">expand_more</i>
@@ -108,7 +108,7 @@
                         <li style="margin: 0.25rem 0;">
                             <a href="chef.html"
                                 style="display:block; padding:0.5rem 0.75rem; color:white; border-radius:0.375rem; text-decoration:none;">
-                                Danh sách đầu bếp
+                                Danh sách nhân viên
                             </a>
                         </li>
                         <li style="margin: 0.25rem 0;">
@@ -220,6 +220,8 @@
                         ">
                             <h4 style="margin: 0; font-weight: 500;">Số nhân viên</h4>
                             <p style="margin: 0.25rem 0 0; font-size: 1.25rem; font-weight: 700;">25</p>
+                            <a href="user.html" style="color: white; text-decoration: underline;">View Staff</a>
+                            <span style="font-size: 1.25rem;">›</span>
                         </div>
 
                         <div style="
