--- a/pages/birthday-cake-1.html
+++ b/pages/birthday-cake-1.html
@@ -123,7 +123,7 @@
           <a class="dropdown-item" href="wedding-cake-1.html">Wedding Cake</a>
         </li>
         <li>
-          <a class="dropdown-item" href="custom-cake-1.html">Custom Cake</a>
+          <a class="dropdown-item" href="custom-cake-1.html">Snack Cake</a>
         </li>
       </ul>
     </div>
@@ -402,7 +402,7 @@
               </h1>
             </a>
             <p class="mt-3">
-              We create the most delicious custom cakes for birthdays and
+              We create the most delicious cakes for birthdays and
               special celebrations.
             </p>
           </div>
